feat(chat): add instant chat system linked to seances and users with timestamp support